connectlog queries
